# free-mujoco-py

./: .gitignore  Dockerfile  build.py  download_mujoco.sh  pyproject.toml  setup1.py
.github/workflows/: build_wheels.yml
mujoco_py/: __init__.py  builder.py
