[tool.poetry]
name = "free-mujoco-py"
version = "2.1.1"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
packages = [
    {include = "mujoco_py"}
]
include = [
    'mujoco_py/binaries/**/*',
    'mujoco_py/cymj.c',
    'mujoco_py/generated/_pyxbld_2.0.2.13_39_linuxcpuextensionbuilder/**/*'
]
build = 'build.py'

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
glfw = "^2.3.0"
numpy = "^1.21.3"
Cython = "^0.29.24"
imageio = "^2.9.0"
cffi = "^1.15.0"
fasteners = "0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.cibuildwheel]
skip = "cp36-* cp37-*"
before-all = """
yum install libtiff-devel libjpeg-devel openjpeg2-devel zlib-devel \
    freetype-devel lcms2-devel libwebp-devel tcl-devel tk-devel \
    harfbuzz-devel fribidi-devel libraqm-devel libimagequant-devel libxcb-devel
pip install --upgrade poetry
poetry install
"""
before-build = "pip install -r requirements.txt"